# OCRjizhang

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/ocr/: config.txt
app/src/main/cpp/: CMakeLists.txt  ocr_native.cpp
app/src/main/res/anim/: nav_enter_back.xml  nav_enter_forward.xml  nav_exit_back.xml  nav_exit_forward.xml  nav_fade_in.xml  nav_fade_out.xml
app/src/main/res/drawable/: bg_asset_badge.xml  bg_asset_symbol.xml  bg_stat_color_dot.xml  bg_statistics_nav_button.xml  bg_transaction_input_panel.xml  ic_add_record_24.xml  ic_assets_24.xml  ic_category_24.xml  ic_category_bag_24.xml  ic_category_book_24.xml  ic_category_coffee_24.xml  ic_category_food_24.xml  ic_category_fun_24.xml  ic_category_heart_24.xml  ic_category_medical_24.xml  ic_category_more_24.xml  ic_category_phone_24.xml  ic_category_receipt_24.xml  ic_category_transport_24.xml  ic_category_wallet_24.xml  ic_chart_24.xml  ic_chevron_right_20.xml  ic_home_24.xml  ic_launcher_monochrome.xml  ic_profile_24.xml  ic_scan_24.xml
app/src/main/res/layout/: activity_main.xml  bottom_sheet_statistics_month_picker.xml  bottom_sheet_statistics_year_picker.xml  (+22 more)
backend/: build.gradle.kts
backend/src/main/resources/: application.yml
docs/: BackEndInstructionManual.md  backend-to-app-sync-strategy-2026-04-07.md  current-delivery-order-2026-04-01.md  development-execution-checkpoint-2026-03-31.md  development-execution-checkpoint-2026-04-03.md  development-execution-plan.md  graduation-demo-rehearsal-runbook-2026-04-02.md  graduation-demo-spec.md  h11-device-retest-2026-04-07.md  local-demo-backend-runbook-2026-04-01.md  ocr-payment-layout-parser-design-2026-04-01.md  product-redesign-spec-2026-04-02.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+153 files in other folders)
